--- a/application-dev.yml
+++ b/application-dev.yml
@@ -6,9 +6,9 @@ jasypt:
 spring:
   redis:
     remote: true        #是否是cachecloud 获取
-    host: 106.14.69.75
-    port: 6381
-    password:
+    host: 101.132.174.159
+    port: 6379
+    password: qihuiredis
   http:
     multipart:
       max-file-size: 1000MB
