--- a/pig-admin-service-dev.yml
+++ b/pig-admin-service-dev.yml
@@ -10,8 +10,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: ENC(gc16brBHPNq27HsjaULgKGq00Rz6ZUji)
-    url: jdbc:mysql://106.14.69.75:3309/pig?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+    password: aliyun-qihui
+    url: jdbc:mysql://101.132.174.159:3306/pig?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
   rabbitmq:
     host: 106.14.69.75
     port: 5682
