--- a/pig-zipkin-elk-dev.yml
+++ b/pig-zipkin-elk-dev.yml
@@ -7,8 +7,8 @@ spring:
   rabbitmq:
     host: 101.132.174.159
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
 
 zipkin:
   storage:
