--- a/pig-admin-service-dev.yml
+++ b/pig-admin-service-dev.yml
@@ -13,10 +13,10 @@ spring:
     password: aliyun-qihui
     url: jdbc:mysql://101.132.174.159:3306/pig?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
   rabbitmq:
-    host: 106.14.69.75
-    port: 5682
-    username: pig
-    password: lengleng
+    host: 101.132.174.159
+    port: 5672
+    username: admin
+    password: admin
   # zipkin:
   #     base-url: http://localhost:5002
   # sleuth:
