--- a/pig-monitor-dev.yml
+++ b/pig-monitor-dev.yml
@@ -2,11 +2,6 @@ server:
   port: 5001
 
 spring:
-  rabbitmq:
-    host: 101.132.174.159
-    port: 5672
-    username: admin
-    password: admin
   # zipkin:
   #     base-url: http://localhost:5002
   # sleuth:
@@ -24,3 +19,11 @@ turbine:
     app-config: pig-gateway #收集监控信息的服务名
     combine-host-port: true
     cluster-name-expression: new String('default') #集群名称
+
+notifier:
+  mobile:
+    enabled: true
+    mobiles:
+      - 17034642119
+  dingTalk:
+    enabled: true
