--- a/pig-zipkin-elk-dev.yml
+++ b/pig-zipkin-elk-dev.yml
@@ -1,20 +1,17 @@
 server:
   port: 5002
 
-spring:
-  sleuth:
-    enabled: false
-  rabbitmq:
-    host: 101.132.174.159
-    port: 5672
-    username: admin
-    password: admin
-
 zipkin:
+  collector:
+    rabbitmq:
+      host: 101.132.174.159
+      username: admin
+      password: admin
+      queue: zipkin
   storage:
     type: elasticsearch
     elasticsearch:
-      hosts: 106.14.69.75:9201
+      hosts: 127.0.0.1:9200
       cluster: elasticsearch
       index: zipkin
       max-requests: 64
